plugins {
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

allprojects {
    group = 'com.tastyhouse'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }
}

// Disable bootJar for root project as it's not an executable application
bootJar {
    enabled = false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
    }

    // Spring Boot 3.2.4 BOM이 고정하는 commons-lang3 3.13.0(CVE-2025-48924)을
    // 패치 버전 3.18.0으로 오버라이드 (BOM 관리 프로퍼티 재정의)
    ext['commons-lang3.version'] = '3.18.0'

    dependencyManagement {
        imports {
            mavenBom 'io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1'
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
